# SPOJ

./: .gitignore  CMakeLists.txt
TETRA/: CMakeLists.txt  tetra.cpp
cmake/: googletest-download.cmake  googletest.cmake
